--- a/index.html
+++ b/index.html
@@ -38,10 +38,7 @@
 
 <h3>Usage</h3>
 
-<p>Download and include <a href="https://raw.githubusercontent.com/filipkis/endev/master/dist/endev.js">endev.js</a> in your HTML:</p>
-<pre><code>
-
-</code></pre>
+<p>Checkout <a href="https://github.com/filipkis/endev/blob/master/README.md">documentation</a> for instructions on usage.</p>
 
 </section>
       <footer>
