--- a/examples/twitter-flickr-search.html
+++ b/examples/twitter-flickr-search.html
@@ -4,8 +4,9 @@
 	<title>EndevJS Twitter API Demo</title>
 	<script src="lib/angular/angular.js"></script>
 	<script src="lib/endev.js"></script>
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css">
 </head>
-<body>
+<body class="container">
 <h1>Endev.js Demo</h1>
 Search:
 <input ng-model="query" placeholder="Search for something...">
