--- a/examples/chess.html
+++ b/examples/chess.html
@@ -2,7 +2,10 @@
 <html>
 	<head>
 		<title>EndevJS Weather Compare API Demo</title>
-		<script src="lib/angular/angular.js"></script>
+		<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.14/angular.js"></script>
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.8.2/underscore.js"></script>
+		<script src="https://cdn.firebase.com/js/client/2.1.2/firebase.js"></script>
+		<script src="https://cdn.firebase.com/libs/angularfire/0.9.2/angularfire.min.js"></script>
 		<script src="lib/endev.js"></script>
 		<script src="lib/chess.js"></script>
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css">
@@ -41,16 +44,28 @@
 			}
 		</style>
 	</head>
-	<body class="container" ng-controller="ChessCtrl">
+	<body class="container" ng-controller="ChessCtrl" import="chess">
+	<!-- <input ng-model="move" ng-model-options="{updateOn : 'change blur'}" ng-change="chess.move(move)">
+		
+		<div ng-repeat="c in ['a','b','c','d','e','f','g','h']" class="chess-column">
+			Square
+			<div ng-repeat="r in [8,7,6,5,4,3,2,1]" class="square" ng-class="{white: $parent.$odd ? $odd : !$odd }">
+			Figure
+				<span drop-class="square" on-drop="chess.move({from: c+r, to:target.c + target.r})" class="figure {{chess.get(c + r).color}}">{{chess.get(c + r).type}}</span>
+			</div>
+		</div> -->
 		<h1>Endev.js Chess Demo</h1>
-		Move (in <a href="http://en.wikipedia.org/wiki/Algebraic_notation_%28chess%29">SAN</a>): <input ng-model="move" ng-model-options="{updateOn : 'change blur'}" ng-change="chess.move(move)">
+
+		<div data-object="savedMoves = from('chess').findOrCreate('').$$testingMap(chess.move)">
+		Move (in <a href="http://en.wikipedia.org/wiki/Algebraic_notation_%28chess%29">SAN</a>): <input ng-model="move" ng-model-options="{updateOn : 'change blur'}" ng-change="chess.move(move); savedMoves.fen = chess.fen()" >
 		
 		<div ng-repeat="c in ['a','b','c','d','e','f','g','h']" class="chess-column">
 			<!-- Square -->
 			<div ng-repeat="r in [8,7,6,5,4,3,2,1]" class="square" ng-class="{white: $parent.$odd ? $odd : !$odd }">
 				<!-- Figure -->
-				<span drop-class="square" on-drop="chess.move({from: c+r, to:target.c + target.r})" class="figure {{chess.get(c + r).color}}">{{chess.get(c + r).type}}</span>
+				<span drop-class="square" data-on-drop="chess.move({from: c+r, to:target.c + target.r})" class="figure {{chess.get(c + r).color}}" draggable="true">{{chess.get(c + r).type}}</span>
 			</div>
+		</div>
 		</div>
 	</body>
 </html>
