--- a/examples/weather.html
+++ b/examples/weather.html
@@ -3,6 +3,7 @@
 <head>
 	<title>EndevJS Weather API Demo</title>
 	<script src="lib/angular/angular.js"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.8.2/underscore.js"></script>
 	<script src="lib/endev.js"></script>
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css">
 </head>
