--- a/examples/qwait.html
+++ b/examples/qwait.html
@@ -16,7 +16,7 @@
 <input data-value="name"/>
 <button data-insert-into="Queues" data-provider="firebase" data-click="insert({name: newQueueName})">Add new queue</button>
 <select data-value="queuename">
-  <option data-from-e="Queues queue1" data-provider="firebase" value="{{queue1.name}}">{{queue1.name}}</option>
+  <option data-from="Queues queue1" data-provider="firebase" value="{{queue1.name}}">{{queue1.name}}</option>
 </select>
 <!-- <select data-value="queuename">
   <option data-list="q in from('Queues')" value="{{q.name}}">{{q.name}}</option>
@@ -26,12 +26,19 @@
 <!-- <data from="queues q" provider="firebase" where="volumes.q = 'isbn:0747532699'">
   {{q}}
 </data> -->
-<div data-provider="firebase" data-from-e="Queues queue2" where="queue2.name = queuename">
+<div data-provider="firebase" data-from="Queues queue2" where="queue2.name = queuename">
 <!-- <div data-object="queue = from('queues').findOrCreate({name:queuename},{positions:[]})"> -->
 Queue: {{queue2.name}}
-  <div data-from-e="queue2.positions myPosition" where="myPosition.username = 'filip'" default="{username:'filip',name:'Filip Kis'}">
+  <div data-from="queue2.positions myPosition" where="myPosition.username = 'filip'"  auto-update="true">
     <input data-value="myPosition.name"/>
     <input data-value="myPosition.location"/>
+    Search for avatar: <input data-value="query"/>
+    <div data-from="flickr.photos.search fps" provider="yql" where="fps.text=query AND fps.api_key = '8ed78f6ad69cdaf8412b4ea2d7dbbe47'" style="float:right">
+      <div data-from="fps.photo photo">
+        <img ng-src="http://farm{{photo.farm}}.staticflickr.com/{{photo.server}}/{{photo.id}}_{{photo.secret}}.jpg">
+        <button data-click="myPosition.avatar = 'http://farm' + photo.farm + '.staticflickr.com/' + photo.server + '/' + photo.id + '_' + photo.secret + '.jpg' ">Choose</button>
+      </div>
+    </div>
     <div data-if="$isDefault">
       <button insert-into="queue2.positions" data-click="insert(myPosition)">Add</button>
     </div>
@@ -52,7 +59,7 @@ Queue: {{queue2.name}}
       </tr>
     </thead>
     <tbody>
-      <tr data-from-e="queue2.positions position">
+      <tr data-from="queue2.positions position">
         <td>{{$index + 1}}</td>
         <td><img ng-src="{{position.avatar}}" height="100"/></td>
         <td>{{position.name}}</td>
@@ -67,59 +74,6 @@ Queue: {{queue2.name}}
       </tr>
     </tbody>
   </table>
-
-<!-- <div data-object="myPosition = queue.positions.find({username:'filip'}).getOrElse({username:'filip',name:'Filip Kis'})"> 
-  <div from="myPosition" from="queue.positions" where="myPosition.username = 'filip'" default="myPosition.username = 'filip' AND myPosition.name = 'Filip Kis'" default-sync="false">
-  <div data-object="myPosition = queue.positions.findOrNew({username:'filip'},{name:'Filip Kis'})">
-    Location: <input data-evalue="myPosition.location" />
-    <br/>
-    Comment: <input data-evalue="myPosition.comment" />
-    <br/>
-    Search for avatar: <input data-evalue="query"/>
-    <data from="flickr.photos.search fps" where="fps.text=query AND fps.api_key = '8ed78f6ad69cdaf8412b4ea2d7dbbe47'" style="float:right">
-      <div data-list="photo in fps.photo">
-        <img ng-src="http://farm{{photo.farm}}.staticflickr.com/{{photo.server}}/{{photo.id}}_{{photo.secret}}.jpg">
-        <button data-click="myPosition.avatar = 'http://farm' + photo.farm + '.staticflickr.com/' + photo.server + '/' + photo.id + '_' + photo.secret + '.jpg' ">Choose</button>
-      </div>
-      <div data-if="$pending">
-        Loading...
-      </div>
-    </data>
-    <div data-if="myPosition in queue.positions">
-      <button data-click="queue.positions.insert(myPosition)">Join</button>
-    </div>
-    <div data-else>
-      <button data-click="queue.positions.remove(myPosition)">Leave</button>
-    </div>
-  </div>
-
-  <table>
-    <thead>
-      <tr>
-        <th>#</th>
-        <th>Avatar</th>
-        <th>User</th>
-        <th>Location</th>
-        <th>Comment</th>
-        <th>Position</th>
-      </tr>
-    </thead>
-    <tbody>
-      <tr data-list="position in queue.positions">
-        <td>{{$index + 1}}</td>
-        <td><img ng-src="{{position.avatar}}" height="100"/></td>
-        <td>{{position.name}}</td>
-        <td>{{position.location}}</td>
-        <td>{{position.comment}}</td>
-        <td>{{$index + 1}}/{{queue.positions.length}}</td>
-        <td>
-          <div data-if="q.positions.$canEdit()">
-            <button data-click="queue.positions.remove(position)">X</button>
-          </div>
-        </td>
-      </tr>
-    </tbody>
-  </table> -->
 </div>
 
 </body>
