--- a/examples/qwait.html
+++ b/examples/qwait.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <title>Qwait</title>
-<!-- <script src='http://cdn.ractivejs.org/latest/ractive.js'></script> -->
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css">
 <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.14/angular.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.8.2/underscore.js"></script>
 <script src="https://cdn.firebase.com/js/client/2.1.2/firebase.js"></script>
@@ -11,13 +11,79 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.9.0/moment.js"></script>
 <script src="lib/endev.js"></script>
 </head>
-<body>
-<input data-value="newQueueName"/>
-<input data-value="name"/>
-<button data-insert-into="Queues" data-provider="firebase" data-click="insert({name: newQueueName})">Add new queue</button>
-<select data-value="queuename">
-  <option data-from="Queues queue1" data-provider="firebase" value="{{queue1.name}}">{{queue1.name}}</option>
-</select>
+<body class="container">
+<div class="row">
+  <div class="col-md-4">
+    <input placeholder="Enter new queue name" data-value="newQueueName"/>
+    <button data-insert-into="Queues" data-provider="firebase" data-click="insert({name: newQueueName})">Add new queue</button>
+  </div>
+</div>
+<div class="row">
+  <div class="col-md-4">
+    Choose queue:
+    <select data-value="queuename">
+      <option data-from="Queues queue1" data-provider="firebase" value="{{queue1.name}}">{{queue1.name}}</option>
+    </select>
+  </div>
+</div>
+<div data-provider="firebase" data-from="Queues queue2" where="queue2.name = queuename">
+  <div class="row">
+    <div class="col-md-4">
+      Queue: {{queue2.name}}
+      <div data-from="queue2.positions myPosition" where="myPosition.username = 'filip'" default="{username:'filip',name:'Filip Kis'}" auto-update="true">
+        <input placeholder="Name" data-value="myPosition.name"/>
+        <br>
+        <input placeholder="Location" data-value="myPosition.location"/>
+        <br>
+        <div data-new>
+          <button data-new insert-into="queue2.positions" data-click="insert(myPosition)">Add</button>
+        </div>
+        <div data-edit>
+          <button remove-from="queue2.positions" data-click="remove(myPosition)">Remove</button>
+        </div>
+        Search for avatar: <input data-value="query"/>
+        <div data-if="query">
+          <div data-from="flickr.photos.search fps" provider="yql" where="fps.text=query AND fps.api_key = '8ed78f6ad69cdaf8412b4ea2d7dbbe47'">
+            <div data-from="fps.photo photo">
+              <img ng-src="http://farm{{photo.farm}}.staticflickr.com/{{photo.server}}/{{photo.id}}_{{photo.secret}}.jpg" style="max-height:100px;">
+              <button data-click="myPosition.avatar = 'http://farm' + photo.farm + '.staticflickr.com/' + photo.server + '/' + photo.id + '_' + photo.secret + '.jpg' ">Choose</button>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="col-md-8">
+      <table>
+        <thead>
+          <tr>
+            <th>#</th>
+            <th>Avatar</th>
+            <th>User</th>
+            <th>Location</th>
+            <th>Comment</th>
+            <th>Position</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr data-from="queue2.positions position">
+            <td>{{$index + 1}}</td>
+            <td><img ng-src="{{position.avatar}}" style="max-height:100px;" /></td>
+            <td>{{position.name}}</td>
+            <td>{{position.location}}</td>
+            <td>{{position.comment}}</td>
+            <td>{{$index + 1}}/{{count(queue2.positions)}}</td>
+            <td>
+              <!-- <div data-if="canEdit(position)"> -->
+                <button remove-from="queue2.positions" data-click="remove(position)">X</button>
+              <!-- </div> -->
+            </td>
+          </tr>
+        </tbody>
+      </table>
+    </div>
+  </div>
+</div>
+
 <!-- <select data-value="queuename">
   <option data-list="q in from('Queues')" value="{{q.name}}">{{q.name}}</option>
 </select> -->
@@ -26,55 +92,6 @@
 <!-- <data from="queues q" provider="firebase" where="volumes.q = 'isbn:0747532699'">
   {{q}}
 </data> -->
-<div data-provider="firebase" data-from="Queues queue2" where="queue2.name = queuename">
 <!-- <div data-object="queue = from('queues').findOrCreate({name:queuename},{positions:[]})"> -->
-Queue: {{queue2.name}}
-  <div data-from="queue2.positions myPosition" where="myPosition.username = 'filip'"  auto-update="true">
-    <input data-value="myPosition.name"/>
-    <input data-value="myPosition.location"/>
-    Search for avatar: <input data-value="query"/>
-    <div data-from="flickr.photos.search fps" provider="yql" where="fps.text=query AND fps.api_key = '8ed78f6ad69cdaf8412b4ea2d7dbbe47'" style="float:right">
-      <div data-from="fps.photo photo">
-        <img ng-src="http://farm{{photo.farm}}.staticflickr.com/{{photo.server}}/{{photo.id}}_{{photo.secret}}.jpg">
-        <button data-click="myPosition.avatar = 'http://farm' + photo.farm + '.staticflickr.com/' + photo.server + '/' + photo.id + '_' + photo.secret + '.jpg' ">Choose</button>
-      </div>
-    </div>
-    <div data-if="$isDefault">
-      <button insert-into="queue2.positions" data-click="insert(myPosition)">Add</button>
-    </div>
-    <div data-else>
-      <button remove-from="queue2.positions" data-click="remove(myPosition)">Remove</button>
-    </div>
-  </div>
-
-  <table>
-    <thead>
-      <tr>
-        <th>#</th>
-        <th>Avatar</th>
-        <th>User</th>
-        <th>Location</th>
-        <th>Comment</th>
-        <th>Position</th>
-      </tr>
-    </thead>
-    <tbody>
-      <tr data-from="queue2.positions position">
-        <td>{{$index + 1}}</td>
-        <td><img ng-src="{{position.avatar}}" height="100"/></td>
-        <td>{{position.name}}</td>
-        <td>{{position.location}}</td>
-        <td>{{position.comment}}</td>
-        <td>{{$index + 1}}/{{queue2.positions.length}}</td>
-        <td>
-          <!-- <div data-if="q.positions.$canEdit()"> -->
-            <button remove-from="queue2.positions" data-click="remove(position)">X</button>
-          <!-- </div> -->
-        </td>
-      </tr>
-    </tbody>
-  </table>
-</div>
-
 </body>
 </html>
