Cleaning up examples

--- a/examples/greenbutton.html
+++ b/examples/greenbutton.html
@@ -2,10 +2,8 @@
 <html>
 <head>
 	<title>EndevJS GreenButton API Demo</title>
-	<script src="lib/angular/angular.js"></script>
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.8.2/underscore.js"></script>
-	<script src="lib/endev.js"></script>
-	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.0/css/bootstrap.min.css">
+	<link rel="stylesheet" href="../bower_components/bootstrap/dist/css/bootstrap.css">
+	<script src="../dist/endev.full.js"></script>
 </head>
 <body>
 <h1>Endev.js Demo</h1>
