--- a/examples/qwait.html
+++ b/examples/qwait.html
@@ -3,13 +3,12 @@
 <head>
 <meta charset="UTF-8">
 <title>Qwait</title>
-<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css">
-<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.14/angular.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.8.2/underscore.js"></script>
-<script src="https://cdn.firebase.com/js/client/2.1.2/firebase.js"></script>
-<script src="https://cdn.firebase.com/libs/angularfire/1.0.0/angularfire.min.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.9.0/moment.js"></script>
-<script src="lib/endev.js"></script>
+<link rel="stylesheet" href="../bower_components/bootstrap/dist/css/bootstrap.css">
+<script src="../bower_components/angular/angular.js"></script>
+<script src="../bower_components/underscore/underscore.js"></script>
+<script src="../bower_components/firebase/firebase.js"></script>
+<script src="../bower_components/angularfire/dist/angularfire.min.js"></script>
+<script src="../dist/endev.js"></script>
 </head>
 <body class="container">
 <div class="row">
