--- a/examples/tobe.html
+++ b/examples/tobe.html
@@ -2,9 +2,8 @@
 <html>
 <head>
 	<title>EndevJS Tobe Demo</title>
-	<script src="lib/angular/angular.js"></script>
-	<script src="lib/endev.js"></script>
-	<link rel="stylesheet" href="bootstrap/css/bootstrap.css"/>
+	<link rel="stylesheet" href="../bower_components/bootstrap/dist/css/bootstrap.css"/>
+	<script src="../dist/endev.full.js"></script>
 	<style>
 		.main-text {
 			font-size: 24px;
