--- a/examples/twitter-flickr-search.html
+++ b/examples/twitter-flickr-search.html
@@ -2,9 +2,8 @@
 <html>
 <head>
 	<title>EndevJS Twitter API Demo</title>
-	<script src="lib/angular/angular.js"></script>
-	<script src="lib/endev.js"></script>
-	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css">
+	<link rel="stylesheet" href="../bower_components/bootstrap/dist/css/bootstrap.css">
+	<script src="../dist/endev.full.js"></script>
 </head>
 <body class="container">
 <h1>Endev.js Demo</h1>
@@ -12,23 +11,23 @@ Search:
 <input ng-model="query" placeholder="Search for something...">
 
 <h2>Twitter results:</h2>
-<data from="twitter.search.tweets tst" where="tst.q = query AND tst.consumer_key='08ZNcNfdoCgYTzR7qcW1HQ' AND tst.consumer_secret='PTMIdmhxAavwarH3r4aTnVF7iYbX6BRfykNBHIaB8' AND tst.access_token='1181240586-JIgvJe4ev3NHdHnAqnovHINWfpo0qB2S2kZtVRI' AND tst.access_token_secret='1nodv0LBsi7jS93e38KiW8cHOA5iUc6FT4L6De7kgk'">
-	<div ng-repeat="s in tst.json.statuses">
+<div from="twitter.search.tweets tst" where="tst.q = query AND tst.consumer_key='08ZNcNfdoCgYTzR7qcW1HQ' AND tst.consumer_secret='PTMIdmhxAavwarH3r4aTnVF7iYbX6BRfykNBHIaB8' AND tst.access_token='1181240586-JIgvJe4ev3NHdHnAqnovHINWfpo0qB2S2kZtVRI' AND tst.access_token_secret='1nodv0LBsi7jS93e38KiW8cHOA5iUc6FT4L6De7kgk'" provider="yql">
+	<div from="tst.json.statuses s">
 		{{s.text}}
 	</div>
-	<div ng-if="$pending">
+	<!-- <div ng-if="$pending">
 		Loading...
-	</div>
-</data>
+	</div> -->
+</div>
 
 <h2>Flickr results:</h2>
-<data from="flickr.photos.search fps" where="fps.text=query AND fps.api_key = '8ed78f6ad69cdaf8412b4ea2d7dbbe47'">
-	<div ng-repeat="photo in fps.photo">
+<div from="flickr.photos.search fps" where="fps.text=query AND fps.api_key = '8ed78f6ad69cdaf8412b4ea2d7dbbe47'" provider="yql">
+	<div from="fps.photo photo">
 		<img ng-src="http://farm{{photo.farm}}.staticflickr.com/{{photo.server}}/{{photo.id}}_{{photo.secret}}.jpg">
 	</div>
-	<div ng-if="$pending">
+	<!-- <div ng-if="$pending">
 		Loading...
-	</div>
-</data>
+	</div> -->
+</div>
 </body>
 </html>
