--- a/examples/720.html
+++ b/examples/720.html
@@ -3,9 +3,8 @@
 <head>
 	<title>EndevJS 720 API Demo</title>
 	<script src="http://code.jquery.com/jquery-1.10.1.min.js"></script>
-	<script src="lib/angular/angular.js"></script>
-	<script src="lib/endev.js"></script>
 	<script src="http://code.highcharts.com/stock/highstock.js"></script>
+	<script src="../dist/endev.full.js"></script>
 	<script>
 		endev.app.controller("SevenTwentyCtrl", function($scope, $filter) {
 			Highcharts.setOptions({
