--- a/examples/chess.html
+++ b/examples/chess.html
@@ -2,13 +2,9 @@
 <html>
 	<head>
 		<title>EndevJS Weather Compare API Demo</title>
-		<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.14/angular.js"></script>
-		<script src="https://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.8.2/underscore.js"></script>
-		<script src="https://cdn.firebase.com/js/client/2.1.2/firebase.js"></script>
-		<script src="https://cdn.firebase.com/libs/angularfire/0.9.2/angularfire.min.js"></script>
-		<script src="lib/endev.js"></script>
-		<script src="lib/chess.js"></script>0
-		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css">
+		<link rel="stylesheet" href="../bower_components/bootstrap/dist/css/bootstrap.css">
+		<script src="../dist/endev.full.js"></script>
+		<script src="lib/chess.js"></script>
 		<style>
 			.chess-column {
 				float: left;
