Changed to relative endev url in qwait-simple

--- a/examples/qwait-simple.html
+++ b/examples/qwait-simple.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <title>Queue System</title>
-<script src="http://www.endevjs.org/endev.full.js"></script>
+<script src="../dist/endev.full.js"></script>
 </head>
 <body>
 <div data-provider="firebase" data-from="Queues queue" data-where="queue.name = 'workshop'">
