Fixed the paths of most example libraries
The examples have been enumerated and three things have been changed in
all of the ones that are in a working state:

 - Bootstrap URL now points to a CDN
 - Endev URL now points to ../dist/endev.full.js
 - External libraries are removed, now the full endev library is always
   loaded (with angular, underscore etc. bundled)

The Bootstrap URL had to be changed since there's no bower_components
folder (or anything else that has to do with bower for that matter)
anymore. In some, but not all, examples the endev URL used to point to
endevjs.org, which meant that any local changes weren't reflected in the
examples. And lastly, there is at the minute no endev build that does
not bundle all its dependencies, though that most probably will change
in the future.

--- a/examples/civis.html
+++ b/examples/civis.html
@@ -3,12 +3,8 @@
 <head>
 <meta charset="UTF-8">
 <title>Qwait</title>
-<link rel="stylesheet" href="../bower_components/bootstrap/dist/css/bootstrap.css">
-<script src="../bower_components/angular/angular.js"></script>
-<script src="../bower_components/underscore/underscore.js"></script>
-<script src="../bower_components/firebase/firebase.js"></script>
-<script src="../bower_components/angularfire/dist/angularfire.min.js"></script>
-<script src="../dist/endev.js"></script>
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
+<script src="../dist/endev.full.js"></script>
 </head>
 <body class="container">
     <div use="https://raw.githubusercontent.com/filipkis/endev/master/examples/data-tables/civis-user.xml" data-from="civis.user user" provider="yql">
