--- a/examples/twitter-flickr-search.html
+++ b/examples/twitter-flickr-search.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<title>EndevJS Twitter API Demo</title>
-	<link rel="stylesheet" href="../bower_components/bootstrap/dist/css/bootstrap.css">
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
 	<script src="../dist/endev.full.js"></script>
 </head>
 <body class="container">
