--- a/examples/todo.html
+++ b/examples/todo.html
@@ -3,8 +3,8 @@
 <head>
 <meta charset="UTF-8">
 <title>Queue System</title>
-<link rel="stylesheet" href="../bower_components/bootstrap/dist/css/bootstrap.css">
-<script src="http://www.endevjs.org/endev.full.js"></script>
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
+<script src="../dist/endev.full.js"></script>
 </head>
 <body class="container">
 <h3> ToDo App </h3>
