--- a/tutorial/index.html
+++ b/tutorial/index.html
@@ -15,7 +15,7 @@
     <script src="https://cdn.firebase.com/js/client/2.3.2/firebase.js"></script>
     <script src="https://cdn.firebase.com/libs/angularfire/1.1.3/angularfire.min.js"></script>
     <!--<script src="http://www.endevjs.org/endev.full.js"></script>-->
-    <script src="../../code/dist/endev.js"></script>
+    <script src="http://www.endevjs.org/endev.js"></script>
     <script>
         endev.logic = {
             toDate: function(timestamp) {
