Making it scroll to top

--- a/tutorial/index.html
+++ b/tutorial/index.html
@@ -254,6 +254,6 @@ mixpanel.init("b0c17fb4dc200837c6f59c3e79217fff");
 </head>
 <body class="container">
 <h1 id="start">Endev Tutorial</h1>
-<div ng-view></div>
+<div ng-view autoscroll="true"></div>
 </body>
 </html>
